--- a/ContaOnline.Repository/ContaOnline.Repository.csproj
+++ b/ContaOnline.Repository/ContaOnline.Repository.csproj
@@ -85,5 +85,12 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\contadb_contacategoria.sql" />
+    <Content Include="Scripts\contadb_contacorrente.sql" />
+    <Content Include="Scripts\contadb_contato.sql" />
+    <Content Include="Scripts\contadb_routines.sql" />
+    <Content Include="Scripts\contadb_usuario.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
