adicionado script da tabela de conta e editado procedure de incluir contato

--- a/ContaOnline.Repository/ContaOnline.Repository.csproj
+++ b/ContaOnline.Repository/ContaOnline.Repository.csproj
@@ -86,6 +86,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\contadb_conta.sql" />
     <Content Include="Scripts\contadb_contacategoria.sql" />
     <Content Include="Scripts\contadb_contacorrente.sql" />
     <Content Include="Scripts\contadb_contato.sql" />
