--- a/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
+++ b/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
@@ -120,10 +120,12 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Code\AppHelper.cs" />
     <Compile Include="Controllers\AppController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\LoginViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -151,13 +153,23 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.min.css.map" />
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+    <Content Include="Views\App\Login.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ContaOnline.Domain\ContaOnline.Domain.csproj">
+      <Project>{6f8e6059-f197-41f3-b7ab-27cec1225e1a}</Project>
+      <Name>ContaOnline.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ContaOnline.Repository\ContaOnline.Repository.csproj">
+      <Project>{453abac7-5166-4998-9460-cbbd54674836}</Project>
+      <Name>ContaOnline.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
