--- a/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
+++ b/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
@@ -119,6 +119,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Code\AppHelper.cs" />
     <Compile Include="Controllers\AppController.cs" />
+    <Compile Include="Controllers\ContaCorrenteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -159,6 +160,8 @@
     <Content Include="Views\App\Login.cshtml" />
     <Content Include="Scripts\jquery-3.6.3.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.3.min.map" />
+    <Content Include="Views\ContaCorrente\Inicio.cshtml" />
+    <Content Include="Views\ContaCorrente\Incluir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ContaOnline.Domain\ContaOnline.Domain.csproj">
