--- a/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
+++ b/ContaOnline.UI.Web/ContaOnline.UI.Web.csproj
@@ -135,6 +135,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.6.3.min.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Views\ContaCorrente\Alterar.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -162,6 +163,7 @@
     <Content Include="Scripts\jquery-3.6.3.min.map" />
     <Content Include="Views\ContaCorrente\Inicio.cshtml" />
     <Content Include="Views\ContaCorrente\Incluir.cshtml" />
+    <Content Include="Views\ContaCorrente\Excluir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ContaOnline.Domain\ContaOnline.Domain.csproj">
